# climate-tools

./: .env  .gitignore  README.md  RELEASING.md  TESTING.md  intro.md  myst.yml  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  platform-support.yml  tests.yml
climtools/cli/: __main__.py  geojson_to_dhis2.py  inspect_geojson.py
dhis2eo/: org_units.py  synch.py
dhis2eo/cli/: __main__.py  dhis2_client_usage.py  geojson_inspect.py  geojson_to_dhis2.py
dhis2eo/data/: cds.py  stac.py  utils.py  worldpop.py
dhis2eo/html/: JSON.jinja2  Macros.jinja2  jinja_env.py
dhis2eo/integrations/: pandas.py  xarray.py
dhis2eo/stac/: __init__.py  html_dict.py  stac_base.py  worldpop_asset.py  worldpop_item.py  worldpop_stac.py
dhis2eo/utils/: aggregate.py  earthkit.py  time.py
docs/: about.md  contribute.md  data-engineer.md  data-scientist.md  earthkit-netcdf-cicero.ipynb  earthkit-netcdf.ipynb  exporting-organization-units.md  glossary.md  gridded-data.md  importing-organization-units.md  index.md  intro.md  myst.yml  netcdf-load.ipynb  organization-units.md  package-lock.json  package.json  resources.md  toc.yml
docs/_unused/: aggregate-climate-data-nepal.ipynb  auto-import-dhis2-monthly.ipynb  automated-cds-import.ipynb  idea-for-notebooks-config.ipynb  import-orgunits-to-dhis2-auto.ipynb  manual-era5-download.ipynb  run-analytics-tables.ipynb
docs/aggregation/: AQ (PW) data aggregation to OU.ipynb  intro.md  (+6 more)
tests/: conftest.py  org_units.py  synch.py  test_notebooks.py
utils/: geojson_to_dhis2.py  inspect_geojson.py
(+172 files in other folders)
