[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "climtools"
version = "0.1.0"
description = "DHIS2 Climate Tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pyshp==2.*",
]

[project.scripts]
climtools = "climtools.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["climtools"]
