[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dhis2eo"
version = "0.1.0"
description = "DHIS2 Earth Observation Toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "earthkit-data[netcdf,geotiff,geopandas,projection]",
    "earthkit-transforms",
    "dhis2-client[cli] @ git+https://github.com/dhis2/dhis2-python-client.git@v0.2.1",
]

[project.scripts]
climtools = "dhis2eo.cli.__main__:main"

[tool.setuptools]
packages = ["dhis2eo"]
