[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dhis2eo"
version = "0.1.0"
description = "DHIS2 Earth Observation Toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "earthkit-data[netcdf,geotiff,geopandas,projection,cds]",
    "earthkit-transforms>=0.5",
    "earthkit-plots",
    "dhis2-client @ git+https://github.com/dhis2/dhis2-python-client.git",
]

[project.scripts]
climtools = "dhis2eo.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dhis2eo*"]
